--- a/VRChat/15/1009815.html
+++ b/VRChat/15/1009815.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "6A6RUUbFfrDWFtdAmlRuejlOr5efLMT1kr/CjNeawcQ="></script>
+    "avHuISg/R9EH+H0B/CzjpUJCrKO73KL6/R1eZ7FPjnY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ニッケルちゃんぬいぐるみ","description":"※無料版と有料版にデータの差異はございません。\n有料版はご支援と考えてくださるとありがたいです。\n\n\n【ニッケルちゃんぬいぐるみ】v1.0\n\nVRChatでの使用を主な目的とした3Dモデルです。\n基本的にVRChatワールドへの設置を前提としたパッケージ構成になっております。\nテクスチャも含め改変は自由ですが、改変を伴わない再配布・二次配布・転売はおやめください。\n可愛がってあげてね。\n\n△1892ポリゴン\nStandardシェーダー用テクスチャ三枚（アルベド・メタリック・ノーマル）同梱。","url":"https://booth.pm/ja/items/1009815","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/33f35c4a-fc58-4353-abe5-4faca5e412cb/i/1009815/c27c6c79-bbad-4526-aee9-4c4e558a426f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="6A6RUUbFfrDWFtdAmlRuejlOr5efLMT1kr/CjNeawcQ="></script>
+    nonce="avHuISg/R9EH+H0B/CzjpUJCrKO73KL6/R1eZ7FPjnY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1009815/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               9
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1009815/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               9
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
