--- a/VRChat/75/1008975.html
+++ b/VRChat/75/1008975.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "qD+P9dRlJi6QnGHa2eXTt/t3ggH1X7zLlc+dCG/WumI="></script>
+    "P67Gsy/Z/F0pkHKXk2+8J7CM64o3+9C4IhoEZpuBsGE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料DL可】３Dモデル：かぼちゃヘッドギア","description":"この商品はVRchat向けのアクセサリとして作成した3Dモデルです。\n頭に被ることを想定したモデルですが、他にも飾り付けの一つに流用するなど、お好きな場所に設置してお使いください。\nハロウィンはもちろん、その他コミカルなホラーテイストの制作に使えます。\n\n本商品はblenderで作成し、Unityでの使用を想定して作られたモデルとなります。\n本商品のデータを使用したことで問題が発生した場合、作者は一切責任をとりません。","url":"https://booth.pm/ja/items/1008975","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/ecbe906e-dd0a-4826-9b04-0f8a857c3ac0/i/1008975/b7e670bd-34e2-4f5f-a418-5584a28b91ca_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="qD+P9dRlJi6QnGHa2eXTt/t3ggH1X7zLlc+dCG/WumI="></script>
+    nonce="P67Gsy/Z/F0pkHKXk2+8J7CM64o3+9C4IhoEZpuBsGE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1008975/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               151
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1008975/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               151
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
