--- a/VRChat/13/1008213.html
+++ b/VRChat/13/1008213.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "/ZbClDXwWleImKWd+fvySBqXX6Xh7pHL47Rgc4s6w4I="></script>
+    "VpnJNRqcHVjOarLWQXky5IUezLfzUPwIbleWBzBVm1U="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"缶バッジの3Dモデル","description":"缶バッジ\npsdを同梱していますので、好きなように描きかえて使ってください。\n\n仕様\n・256 ポリゴン\n・1 マテリアル\n・テクスチャサイズ 1024x1024\n・大きさ 2m\n\nファイルについて\n・結城ゆきの品位を落とすような用途での使用は禁止。\n・テクスチャの絵柄部分の一部分を描きかえることは禁止。\n・テクスチャの絵柄部分を完全に描きかえることは許可。\n・3Dモデルの改造は許可。\n・すべて利用者の責任で使用してください。\n\nYukiYukiVirtual 結城ゆき 2018/September/10\n\nVRChatで帽子に着けて遊んでいます。リアル缶バッジは https://yukiyukivirtual.booth.pm/items/964944 から","url":"https://booth.pm/ja/items/1008213","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/cdb02673-8664-4200-9407-c3c4df48aa2c/i/1008213/65ca7ff4-d599-4424-ac8a-30b381d8b958_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/ZbClDXwWleImKWd+fvySBqXX6Xh7pHL47Rgc4s6w4I="></script>
+    nonce="VpnJNRqcHVjOarLWQXky5IUezLfzUPwIbleWBzBVm1U="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -170,7 +170,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1008213/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               28
@@ -185,14 +185,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1008213/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               28
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
