--- a/VRChat/13/1008113.html
+++ b/VRChat/13/1008113.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ETBqOO0FjelZiQpsArcyz+a4q4xEohHqJiI7aGtKXCs="></script>
+    "EniX8cQPD4fN0L9z4em99R8F0v9NwfdlDuhA0MQKdEM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC向けオリジナル3Dモデル『ローザ/VT-223』","description":"【Ver1.01アップデート】\n・シェーダーの設定を一部変更しました。\n\nVRC向けのオリジナルアバターです。\nDynamicBoneとユニティちゃんトゥーンシェーダー2.0に対応しています。\n\n※予めUnityプロジェクトにVRCSDK、及びDynamicBone(任意)をインポートした状態でunitypackageをインポートしてください。\n\n→https://phio.booth.pm/items/978750\n\nポリゴン数(三角面)：19942\nマテリアル数：8\n\n\n\n\n本データはVRCでの利用を想定しております。VRC以外での利用は禁止しませんが、本データを利用したことによって生じるいかなる損害に対して当方は一切責任を負いません。\n以下の規約に従った上で、ご自由にお使いください。\n\n【注意！！】\n・アバターの手足の比率が人間と乖離しているため、フルトラッキングにすると軽い中腰状態になります。\n\n◆禁止事項\n・本データの再配布は禁止です。\n・自作発言等、作者を偽る発言はおやめください。\n・ローザ/VT-223というモデル/名称を使いを架空のキャラクターとして公の場で活動させる行為(バーチャルYouTuber活動)は禁止です。ただし、十分独自性があると認められるほど改変したモデルはその限りではありません。\n\n◆やってもいいことの一例\n・データの改変\n・営利利用\n・映像制作\n・動画配信\n\n◆補足\n本規約における再配布の定義の中にVRCへのデータのアップロードは含まれておりません。ただし、アバターペデスタルへの利用は禁止します。\n本データにはユニティちゃｎトゥーンシェーダーが含まれております。\n© Unity Technologies Japan/UCL","url":"https://booth.pm/ja/items/1008113","offers":{"priceCurrency":"JPY","@type":"Offer","price":"980"},"image":"https://booth.pximg.net/c/620x620/22623f29-cbf4-42f5-96e7-40d523e8e6fe/i/1008113/0b5a141d-6477-4eb0-93d5-f854f93431e1_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ETBqOO0FjelZiQpsArcyz+a4q4xEohHqJiI7aGtKXCs="></script>
+    nonce="EniX8cQPD4fN0L9z4em99R8F0v9NwfdlDuhA0MQKdEM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1008113/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               57
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1008113/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               57
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
